k8s-manifests/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: vancoricomplex/home-jungle-proxy-prod:0.1.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  type: NodePort
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
