k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-jungle-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: home-jungle-app
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: proxy-service
      port:
        number: 80
